instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: not found: type blue
setCouleurBrosse(Color:blue)
                       ^InstructionsDrawG:1: error: object java.awt.Color is not a value
setCouleurBrosse(Color:blue)
                 ^InstructionsDrawG:15: error: not found: value doite
doite()
^